# nova-agent

./: .gitignore copy  .gitmodules  .pre-commit-config.yaml  Justfile  Makefile  README.md  SUPPORT.md  TRANSPARENCY.md  lefthook.yaml  mise.toml  pyproject.toml
.github/actions/setup-environment/: action.yaml
.github/workflows/: pr-checks.yaml
apis/: HOVERNET_API.txt  LAZYSLIDE_API.txt  TRIDENT_API.txt
benchmark/: capability_hierarchy.json
benchmark/cellular_qa/: notes.csv  questions.json
benchmark/cellular_qa/ground_truth/question_1/: answer.json
benchmark/cellular_qa/ground_truth/question_10/: answer.json
benchmark/cellular_qa/ground_truth/question_11/: answer.json
benchmark/cellular_qa/ground_truth/question_12/: answer.json
benchmark/cellular_qa/ground_truth/question_13/: answer.json
benchmark/cellular_qa/ground_truth/question_14/: answer.json
benchmark/cellular_qa/ground_truth/question_15/: answer.json
benchmark/cellular_qa/ground_truth/question_16/: answer.json
benchmark/cellular_qa/ground_truth/question_17/: answer.json
benchmark/cellular_qa/ground_truth/question_18/: answer.json
benchmark/cellular_qa/ground_truth/question_19/: answer.json
benchmark/cellular_qa/ground_truth/question_2/: answer.json  (+1 more)
benchmark/data_qa/: notes.csv  questions.json
benchmark/patch_qa/: notes.csv  questions.json
benchmark/slide_qa/: notes.csv  questions.json
configs/experiments/: codeagent_with_rag.yaml  codeagent_with_tools.yaml  codeagent_without_tools.yaml  llm_only.yaml  llm_with_pi.yaml  llm_with_pi_and_retries.yaml  toolcalling_agent_with_tools.yaml
configs/experiments/shared/: base_codeagent.yaml  base_llm_with_pi.yaml  base_toolcalling_agent.yaml  experiment.yaml  libraries.yaml
configs/llms/: default_llm.yaml
configs/segmentation/hovernet_roi/: pannuke_cell_types.json  pannuke_config.json
prompts/general_system_prompts/: code_agent_prompt_template.yaml
src/nova/: constants.py  main.py  paths.py
src/nova/baselines/: base.py  codeagent.py  llm_baselines.py  tool_calling_agent.py
src/nova/evaluation/: evaluator.py
src/nova/experiments/: questions_schema.py  run_experiment.py  runner.py
src/nova/llm/: __init__.py  azure_token.py  endpoint.py  llm.py
src/nova/tools/: all_tools.py
src/nova/utils/: azureml.py  clustering.py  config.py  deterministic.py  io.py  similarity.py  summarize.py  text.py
(+124 files in other folders)
