[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nova"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Biomedical Imaging Team", email = "innereyedev@microsoft.com" },
]
maintainers = [
    { name = "Biomedical Imaging Team", email = "innereyedev@microsoft.com" },
]
dependencies = [
    "azure-ai-ml>=1.28.1",
    "azure-identity>=1.19",
    "azureml-core>=1.60",
    "azureml-mlflow>=1.60.0.post1",
    "conch",
    "daltonize>=0.2.0",
    "datasets>=4.0.0",
    "docopt>=0.6.2",
    "duckduckgo-search>=8.0.5",
    "faiss-cpu>=1.11.0",
    "gdown>=5.2.0",
    "gitingest>=0.1.5",
    "httpx==0.28.1", # need this version for MCP servers
    "hydra-core>=1.3.2",
    "igraph>=0.11.9",
    "imgaug>=0.4.0",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.25",
    "lazyslide==0.7.0",
    "lifelines>=0.30.0",
    "marsilea>=0.5.3",
    "openai>=1.55.0",
    "pyvips>=3.0.0",
    "rank-bm25>=0.2.2",
    "scanpy>=1.11.2",
    "scikit-survival>=0.24.1",
    "smolagents>=1.21.0",
    "termcolor>=3.1.0",
    "trident",
]



[project.urls]
repository = "https://github.com/microsoft/bio-data-agents"

[dependency-groups]
dev = [
    "ipykernel>=7.0.0a0",
    "jupyter-server>=2.13.0",
    "plotly>=6.0.0",
    "pre-commit-uv>=4.1.4",
]
tests = ["pytest-sugar>=1.0.0", "pytest>=8.3.4"]
quality = ["pre-commit-uv>=4.1.4", "pyright>=1.1.392.post0", "ruff>=0.9.2"]


[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint.isort]
known-first-party = ["agents"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]

[tool.pyright]
exclude = [
    "**/*.egg-info",
    "**/__pycache__",
    "**/.git/**",
    "**/.pytest_cache/**",
    "**/.ruff_cache/**",
    "**/.venv/**",
    "outputs/**",
    "wandb/**",
]
typeCheckingMode = "standard"

[tool.uv.sources]
trident = { git = "https://github.com/mahmoodlab/TRIDENT.git" }
conch = { git = "https://github.com/mahmoodlab/CONCH.git" }

[tool.uv]
override-dependencies = [
    'timm>=1.0.3'
]

[project.scripts]
run_experiment = "nova.experiments.run_experiment:main"
run_nova= "nova.main:main"
